# kalshi_bot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
kalshi_bot/analysis/: get_total_prices.py  pyproject.toml  t  t.py
kalshi_bot/core/: client.py  delta_recorder.py
kalshi_bot/core/data/: market.py  order_book.py
kalshi_bot/duckdb/config/: signal_test.json
kalshi_bot/duckdb/runners/: run_all_signals.py  run_signal.py
kalshi_bot/duckdb/sql/: create_signal_test.sql  signal_test.sql  signal_test_create.sql
kalshi_bot/monitor/: heartbeat.py
kalshi_bot/strategy/: scalper.py  sweep.py
kalshi_bot/util/: load_credential.py  logger.py  util.py
